samples/_failures_safe/1761551270_055086_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3b969a8.c: In function ‘create_parser_node’:
./samples/SAFE/__tmp_d3b969a8.c:172:9: error: ‘struct ParserNode’ has no member named ‘node’
  172 |     node->node
      |         ^~
./samples/SAFE/__tmp_d3b969a8.c:172:15: error: expected ‘;’ at end of input
  172 |     node->node
      |               ^
      |               ;
./samples/SAFE/__tmp_d3b969a8.c:172:5: error: expected declaration or statement at end of input
  172 |     node->node
      |     ^~~~
